# dpi-cpp

./: CMakeLists.txt  README.md  main.cpp
example/openarray/: test.cpp  top.sv
include/gh/: systemverilog.hpp
include/gh/systemverilog/: dpi.hpp  sim.hpp
include/gh/systemverilog/_experimental/: simulator.hpp
include/gh/systemverilog/dpi/: bit.hpp  direction.hpp  logic.hpp  openarray.hpp  scope.hpp  type.hpp  vector.hpp  version.hpp
test/: CMakeLists.txt  dpi.hpp  openarray0d.cpp  openarray1d.cpp  openarray2d.cpp  openarray4d.cpp  test_main.cpp
test/include/: svdpi.h  svdpi.hpp
test/src/: svdpi.cpp
